[package]
name = "rust_unittesting_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.13", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
jsonwebtoken = "8.0"
once_cell = "1.8"
dotenv = "0.15.0"
http = "0.2"
anyhow = "1.0"